--- a/index.html
+++ b/index.html
@@ -12,7 +12,8 @@
 
   <div class="container">
     <h1>Shopping List</h1>
-
+<div class ="test-class">
+</div>
     <form id="js-shopping-list-form">
       <label for="shopping-list-entry">Add an item</label>
       <input type="text" name="shopping-list-entry" id="shopping-list-entry" placeholder="e.g., broccoli">
